--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://marianguyenle17:vsCvyXPqHNKUYfcc@cluster0.khvvf0t.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://zbatty1297:FqrFBnABT5cmM9Oo@cluster0.vf5n81a.mongodb.net/
