--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
