--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://zbatty1297:FqrFBnABT5cmM9Oo@cluster0.vf5n81a.mongodb.net/
+MONGO_URL=mongodb+srv://username:password@cluster0.vf5n81a.mongodb.net/
